# Windows-Optimizer

./: .gitignore  CHANGES.md  Cargo.toml  IMPLEMENTATION.md  LICENSE  README.md
.github/workflows/: ci.yml
src/: lib.rs  main.rs  report.rs  types.rs
src/checks/: audio.rs  cpu.rs  gpu.rs  gpu_helper.rs  input.rs  latency.rs  memory.rs  mod.rs  network.rs  platform.rs  power.rs  security.rs  service_helper.rs  services.rs  stability.rs  storage.rs  thermal.rs  utils.rs  wmi_helper.rs
tests/: integration_tests.rs
